# cookiecutter-pcds-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  cookiecutter.json  dev-requirements.txt  requirements.txt  run_tests.py
.github/workflows/: cookiecutter-test.yml
docs/: Makefile  make.bat
docs/source/: conf.py  getting-started.rst  index.rst
hooks/: post_gen_project.sh
tests/: test_creation.py
{{ cookiecutter.folder_name }}/: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  docs-requirements.txt  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py
{{ cookiecutter.folder_name }}/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.folder_name }}/.github/workflows/: standard.yml
{{ cookiecutter.folder_name }}/conda-recipe/: meta.yaml
{{ cookiecutter.folder_name }}/docs/: pre-release-notes.sh
{{ cookiecutter.folder_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.folder_name }}/{{ cookiecutter.import_name }}/: __init__.py  utils.py
{{ cookiecutter.folder_name }}/{{ cookiecutter.import_name }}/tests/: test_blank.py
{{ cookiecutter.repo_name }}/: .gitignore  .landscape.yml  .travis.yml  logging.yml  requirements.txt
{{ cookiecutter.repo_name }}/docs/: Makefile  make.bat
{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.rst  utils.rst
{{ cookiecutter.repo_name }}/notebooks/: 0.0-Notebook-Template.ipynb
{{ cookiecutter.repo_name }}/{{ cookiecutter.import_name }}/: utils.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.import_name }}/tests/: test_blank.py
